# momentum

./: .aidigestignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  START_HERE.TXT  app.py  build.sh  changelog.md  codebase.md  eslint.config.js  index.html  install.sh  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.sh  requirements.txt  run.sh  tailwind.config.js  test.py  todo.txt
api/: authentication.py  dependencies.py  main.py  schemas.py
api/routes/: auth.py  subscriptions.py  tasks.py
app/: README.md  __init__.py  app.py  index.html  package.json  tailwind.config.js
app/config/: config.py
app/core/: logic.py
app/data/: agreement_text.txt  config.json
app/database/: __init__.py  db.py
app/logic/: __init__.py  logic_gate.py
app/logic/models/: task.py
app/logic/services/: __init__.py  db.py
app/models/: task.py
app/pages/: __init__.py  dashboard.py  entry.py
app/src/: App.css  App.jsx  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src/components/: header.jsx  taskModal.jsx
app/src/hooks/: authContext.jsx
app/src/pages/: landing.jsx
app/utils/: color_theme.json
cli/: commands.py  main.py  pyproject.toml  tm_cli.py
config/: config.py  pyproject.toml
core/: README.md  __init__.py  changelog.md  controller.py  logic.py  pyproject.toml
core/database/: __init__.py  db.py
core/models/: __init__.py  task.py  user.py
core/utils/: __init__.py
core/validators/: validators.py
gui/: __init__.py  main.py  pyproject.toml
gui/pages/: dashboard.py
scripts/: requirements.sh
src/: App.css  App.jsx  App.tsx  main.jsx  main.tsx
src-tauri/: tauri.conf.json
src/components/: currTask.jsx  header.jsx  header.tsx  noTasks.jsx  popUp.jsx
src/lib/: database.jsx  database.tsx  migrate.tsx  taskService.jsx  taskService.tsx
src/pages/: dashboard.tsx  landing.jsx  landing.tsx
src/utils/: idb.ts
static/css/: dashboard.css  landing.css  style.css
static/css/components/: footer.css  header.css  modal.css  notifications.css  welcome.css
static/js/: app.js
storage/: .gitignore  README.md  __init__.py  changelog.md  controller.py  database.py  pyproject.toml
storage/controllers/: __init__.py  offline.py  online.py
templates/: dashboard.html  index.html  landing.html
templates/components/: footer.html  header.html  navbar.html  welcome.html
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_storage.py
tests/models/: test_task.py  test_user.py
tests/routes/: test_auth.py  test_subscriptions.py  test_tasks.py
tm_cli/: README.md  __init__.py  changelog.md  pyproject.toml  tm_cli.py
tm_cli/commands/: __init__.py  add.py  delete.py  edit.py  list.py
tm_config/: README.md  changelog.md  config.py  pyproject.toml
tm_core/: README.md  __init__.py  changelog.md  controller.py  pyproject.toml
tm_core/validators/: __init__.py  validators.py
tm_storage/: README.md  __init__.py  changelog.md  controller.py  database.py  pyproject.toml
tm_storage/controllers/: offline.py  online.py
tui/: main.py  pyproject.toml
updater/: __init__.py  app.py
updater/pages/: __init__.py  change_log.py  dashboard.py  notes.py  splash.py  update_notes.py
updater/utils/: __init__.py  update_thread.py
