[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum"
version = "0.1.0"
description = "A CLI/TUI/GUI mono-repo for task tracking"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "mek0124", email = "mek0124@proton.me"},
]
license = "MIT"
dependencies = [
    "click>=8.3.1",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "momentum-core>=1.0.0",
    "click>=8.3.1",
]
tui = [
    "momentum-core>=1.0.0",
    "rich>=14.3.3"
]
gui = [
    "momentum-core>=1.0.0",
    "pyside6>=6.10.2",
    "pyside6-fluent-widgets>=1.11.1",
]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/mek0124/momentum"
Repository = "https://github.com/mek0124/momentum.git"
Documentation = "https://github.com/mek0124/momentum"

[project.scripts]
momentum = "cli.main:cli"
momentum-tui = "tui.main:main"
momentum-gui = "gui.main:main"

[tool.setuptools]
packages = ["cli", "core", "tui", "gui"]

[tool.setuptools.package-data]
"*" = ["*.py", "assets/*"]