[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum"
version = "1.0.0"
description = "A local-first web-based task manager built with Flask"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "mek0124", email = "mek0124@proton.me"},
]
license = "MIT"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/mek0124/momentum"
Repository = "https://github.com/mek0124/momentum.git"
Documentation = "https://github.com/mek0124/momentum"

[project.scripts]
momentum = "app:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/**/*.css", "static/**/*.js"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
momentum = { workspace = true }

[dependency-groups]
dev = [
    "momentum",
]
