[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-core"
version = "1.0.0"
description = "Core functionality for the Momentum task application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.2.2"
]

[tool.setuptools]
package-dir = {"" = ".."}
packages = ["core"]

[tool.setuptools.package-data]
"*" = ["*.py", "assets/*"]