[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-gui"
version = "0.1.0"
description = "GUI interface for the Momentum task application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "momentum-core>=0.1.0",
    "pyside6>=6.10.2",
    "pyside6-fluent-widgets>=1.11.1",
]

[project.scripts]
momentum-gui = "gui.main:main"

[tool.setuptools]
package-dir = {"" = ".."}
packages = ["gui"]

[tool.setuptools.package-data]
"*" = ["*.py"]