[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tm_cli"
version = "0.2.0"
dependencies = [
  "sqlalchemy >= 2.0.0",
  "tm_core @ file:///home/mekasu0124/Documents/dev/portfolio/task-manager/tm_core"]
requires-python = ">= 3.12"
authors = [
  {name = "mek0124", email = "mek0124@proton.me"}
]
description = "the cli tool of the task manager application"
readme = "README.md"
license = {text = "Proprietary"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/mek0124/task-manager/cli/"
Documentation = "https://github.com/mek0124/task-manager/cli/docs"
Repository = "https://github.com/mek0124/task-manager/cli"
Issues = "https://github.com/mek0124/task-manager/issues/"
Changelog = "https://github.com/mek0124/task-manager/cli/changelog.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["models", "validators"]