[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-tui"
version = "1.0.0"
description = "TUI interface for Momentum task application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "momentum-core>=0.1.0",
    "rich>=14.3.3"
]

[project.scripts]
momentum-tui = "tui.main:main"

[tool.setuptools]
package-dir = {"" = ".."}
packages = ["tui"]

[tool.setuptools.package-data]
"*" = ["*.py"]